# et-engine-python

./: .gitignore  README.md  dev.py  dev2.py  ideal-smc-master-script.py  pyproject.toml  simple-algo-master-script.py  terminate_all_jobs.sh
docs/source/: api_key_methods.rst  conf.py  config.rst  create_app.py  index.rst  jobs.rst  task_methods.rst  tasks.rst  tools.rst  vfs.rst  vfs_methods.rst
et-engine/: app.py  cdk.context.json  dev-dockerfile  dev-helloworld.py  dev.py  push-compute-templates.sh
et-engine-api/: app.py  standard-buildspec.yml
et-engine-api/et_engine_api/: et_engine_api_stack.py
et-engine-api/lambda/: __init__.py  configure.py  create_resource.py  destroy.py  execute.py  hello.py  provision.py  rds_init.py  status.py
et-engine-templates/: update_templates.sh
et-engine-templates/compute-basic/: README.md  app.py  cdk.context.json  compute-basic.yaml
et-engine-templates/efs-basic/: app.py  cdk.context.json  efs-basic.yaml
et-engine/engine-dockerbuild-template/: hello.py
et-engine/et_engine_api/: batch_compute.py  compute_cluster.py  data_transfer.py  data_upload_task.py  et_engine_api_stack.py  et_engine_modules.py  file_systems.py  master_database.py  network.py  rest_api.py  templates.py  upload_files.py  user_pool.py  web_server.py
et-engine/lambda/: data_upload.py  db.py  key-authorizer.py  key_authorizer.py  key_authorizer_test.py  (+3 more)
et_engine/: batches.py  config.py  jobs.py  tasks.py  tools.py  vfs.py
source/: conf.py  ideal-smc-master-script.rst  index.rst  modules.rst  simple-algo-master-script.rst
src/: configure.py
(+267 files in other folders)
